Fix nav scroll on Firefox

--- a/app/assets/styles/global/_page-browser.scss
+++ b/app/assets/styles/global/_page-browser.scss
@@ -6,6 +6,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  min-height: 0;
 }
 
 .pb__title {
@@ -37,9 +38,9 @@
 .pb__contents {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-flow: column nowrap;
   max-height: 0;
-  visibility: none;
+  visibility: hidden;
   opacity: 0;
   overflow: hidden;
   transition: opacity .16s ease 0s, max-height .16s ease 0s, visibility .16s linear 0s;
@@ -50,12 +51,13 @@
     visibility: visible;
     opacity: 1;
     max-height: 320rem;
+    overflow: auto;
   }
 
   .pb--revealed & {
     visibility: visible;
     opacity: 1;
-    max-height: 320rem;
+    max-height: 100%;
   }
 
   > .inner {
